Move root package to me.time1015
Since se7en.io is already taken, and time1015.me has been
recently acquired, this project will be moved to me.time1015
as the root package.

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>io.se7en.utils</groupId>
+  <groupId>me.time1015.utils</groupId>
   <artifactId>dinjector</artifactId>
   <version>1.0</version>
   <packaging>jar</packaging>
